--- a/galaback/config/config.cfg
+++ b/galaback/config/config.cfg
@@ -1,10 +1,8 @@
-GALABACK_FOLDER="$HOME/.galaback"
+#----------User configuration-----------------#
 DATABASE_HOST="127.0.0.1"
 DATABASE_NAME="soda"
 POSTGRES_USER="postgres"
 POSTGRES_PASS="postgres"
 DATABASE_USER="libertya"
 DATABASE_PASS="libertya"
-BACKUP_FOLDER="$GALABACK_FOLDER/backups"
-DATABASE_FOLDER="$BACKUP_FOLDER/db"
-DATABASE_FILE="database.db"
+#---------------------------------------------#
